sinalcabo/force-app/main/default/objects/WorkOrder/fields/Assinatura_Origem__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_Origem__c</fullName>
    <description>Resumo dos campos que a NOS envia. Se a assinatura não mudar entre leituras, a ordem não é reescrita.</description>
    <inlineHelpText>Campo técnico. Não o alteres à mão, senão a integração volta a escrever a ordem sem necessidade.</inlineHelpText>
    <label>Assinatura dos dados da NOS</label>
    <length>64</length>
    <type>Text</type>
</CustomField>