sinalcabo/force-app/main/default/objects/WorkOrder/fields/Assinatura_PNI__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_PNI__c</fullName>
    <description>Resumo dos campos que o ficheiro do PNI traz. Se a assinatura não mudar entre importações, a ordem não é reescrita.</description>
    <inlineHelpText>Campo técnico. Não o alteres à mão, senão a importação volta a escrever a ordem sem necessidade.</inlineHelpText>
    <label>Assinatura dos dados do PNI</label>
    <length>64</length>
    <type>Text</type>
</CustomField>