sinalcabo/force-app/main/default/objects/WorkOrder/fields/Celulas_Candidatas__c.field-meta.xml
<CustomField>
    <fullName>Celulas_Candidatas__c</fullName>
    <description>Outros códigos de célula encontrados no texto da NOS, quando havia mais do que um.</description>
    <inlineHelpText>Se a célula proposta estiver errada, começa por experimentar uma destas.</inlineHelpText>
    <label>Outras células possíveis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>