sinalcabo/force-app/main/default/objects/WorkOrder/fields/Classificacao_Confirmada__c.field-meta.xml
<CustomField>
    <fullName>Classificacao_Confirmada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando uma pessoa do despacho confirmou a célula, a tecnologia e o território.</description>
    <inlineHelpText>Enquanto estiver desligado a ordem aparece na lista de ordens por classificar. A integração nunca reescreve uma célula confirmada.</inlineHelpText>
    <label>Classificação confirmada</label>
    <type>Checkbox</type>
</CustomField>