sinalcabo/force-app/main/default/objects/WorkOrder/fields/Codigo_Utilizador_Cliente_Origem__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Utilizador_Cliente_Origem__c</fullName>
    <description>Código do utilizador a quem a NOS atribuiu a tarefa na plataforma dela, por exemplo LFSEITA ou U1024658.</description>
    <externalId>true</externalId>
    <inlineHelpText>É o código do lado da NOS. Se não houver nenhum recurso nosso com este código, a ordem fica marcada com técnico por mapear.</inlineHelpText>
    <label>Técnico indicado pela NOS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>