sinalcabo/force-app/main/default/objects/WorkOrder/fields/Contrato_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Cliente__c</fullName>
    <description>Contrato de serviço ao abrigo do qual a NOS abriu a tarefa, por exemplo SPGLOBAL.</description>
    <inlineHelpText>Ajuda a separar trabalho de contratos diferentes na facturação.</inlineHelpText>
    <label>Contrato na NOS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>