sinalcabo/force-app/main/default/objects/WorkOrder/fields/Coordenada__c.field-meta.xml
<CustomField>
    <fullName>Coordenada__c</fullName>
    <description>Latitude e longitude da ordem em texto, para poderem ser mostradas na página. A plataforma não deixa colocar a latitude e a longitude sozinhas numa página Lightning, porque são partes do campo composto de morada.</description>
    <formula>IF(OR(ISBLANK(Latitude), ISBLANK(Longitude)), &quot;&quot;, TEXT(Latitude) &amp; &quot;, &quot; &amp; TEXT(Longitude))</formula>
    <inlineHelpText>Vem da célula confirmada. Se trocar a célula, esta coordenada muda e é propagada às marcações em aberto.</inlineHelpText>
    <label>Coordenada</label>
    <type>Text</type>
</CustomField>