sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Alteracao_PNI__c.field-meta.xml
<CustomField>
    <fullName>Data_Alteracao_PNI__c</fullName>
    <description>Data da última alteração da ordem no PNI, tal como vem no ficheiro. É por ela que a importação filtra o que traz e desempata o que é mais recente.</description>
    <inlineHelpText>O PNI só guarda a data e nunca a hora, por isso duas alterações do mesmo dia são indistinguíveis.</inlineHelpText>
    <label>Alterada no PNI em</label>
    <type>Date</type>
</CustomField>