sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Atribuicao_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Data_Atribuicao_Cliente__c</fullName>
    <description>Momento em que a NOS atribuiu a tarefa ao parceiro. É por esta data que a API filtra as janelas de leitura.</description>
    <inlineHelpText>É o candidato a início do relógio contratual. Nunca é a nossa data de início.</inlineHelpText>
    <label>Atribuída na NOS em</label>
    <type>DateTime</type>
</CustomField>