sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Entrega_Cadastro__c.field-meta.xml
<CustomField>
    <fullName>Data_Entrega_Cadastro__c</fullName>
    <description>Momento em que o cadastro da intervenção foi entregue ao operador. Fecha o prazo do cadastro (TEC).</description>
    <inlineHelpText>Preenche quando o cadastro sair para a NOS. Enquanto estiver vazio o prazo do cadastro continua a contar.</inlineHelpText>
    <label>Entrega do cadastro</label>
    <type>DateTime</type>
</CustomField>