sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Fecho_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Data_Fecho_Tecnico__c</fullName>
    <description>Momento em que o técnico deu a intervenção por concluída no terreno. Fecha o prazo de execução (TE) e é o arranque do prazo do cadastro (TEC).</description>
    <inlineHelpText>Vem do fim da marcação quando o técnico a conclui, e da hora do fecho da ordem quando não houve marcação. Corrige-se à mão só com prova do terreno: é a data que conta na penalidade.</inlineHelpText>
    <label>Fecho do técnico</label>
    <type>DateTime</type>
</CustomField>