sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Fim_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Data_Fim_Cliente__c</fullName>
    <description>Hora a que acabou a última intervenção registada na NOS. Pode mudar ao longo da vida da ordem se outro técnico voltar ao local.</description>
    <inlineHelpText>Muda sempre que a NOS registar nova intervenção, por isso não serve como data de fecho definitiva.</inlineHelpText>
    <label>Fim da última intervenção na NOS</label>
    <type>DateTime</type>
</CustomField>