sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Inicio_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio_Cliente__c</fullName>
    <description>Momento em que a tarefa foi criada na plataforma da NOS.</description>
    <inlineHelpText>Não é a hora a que o nosso técnico começou. É a hora a que a NOS abriu a tarefa.</inlineHelpText>
    <label>Aberta na NOS em</label>
    <type>DateTime</type>
</CustomField>