sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Limite_Acordada__c.field-meta.xml
<CustomField>
    <fullName>Data_Limite_Acordada__c</fullName>
    <description>Prazo combinado caso a caso com o operador, nas ordens cujo catálogo diz conforme acordado e que por isso não têm prazo fixo.</description>
    <inlineHelpText>Só se preenche nos códigos sem prazo de catálogo. Se só houver dia combinado, escreve o fim desse dia.</inlineHelpText>
    <label>Data limite acordada</label>
    <type>DateTime</type>
</CustomField>