sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Producao__c.field-meta.xml
<CustomField>
    <fullName>Data_Producao__c</fullName>
    <description>Momento em que o desenho ou registo do cadastro ficou produzido, antes de ser entregue ao operador. Separa o trabalho do técnico do trabalho do back-office.</description>
    <inlineHelpText>É o passo entre o fecho do técnico e a entrega ao operador. Enquanto estiver vazio, o cadastro está do lado do técnico.</inlineHelpText>
    <label>Cadastro produzido em</label>
    <type>DateTime</type>
</CustomField>