sinalcabo/force-app/main/default/objects/WorkOrder/fields/Data_Ultima_Leitura__c.field-meta.xml
<CustomField>
    <fullName>Data_Ultima_Leitura__c</fullName>
    <description>Momento em que a integração leu esta ordem na NOS pela última vez.</description>
    <inlineHelpText>Se estiver muito atrasada face às outras ordens abertas, a integração pode estar parada.</inlineHelpText>
    <label>Última leitura da NOS</label>
    <type>DateTime</type>
</CustomField>