sinalcabo/force-app/main/default/objects/WorkOrder/fields/Dentro_Avenca__c.field-meta.xml
<CustomField>
    <fullName>Dentro_Avenca__c</fullName>
    <description>Ligado quando o tipo de trabalho está coberto pela avença e portanto não é facturado à parte.</description>
    <formula>WorkType.Dentro_Avenca__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vem do tipo de trabalho. Se estiver errado, corrige-se no catálogo de tipos, não na ordem.</inlineHelpText>
    <label>Dentro da avença</label>
    <type>Checkbox</type>
</CustomField>