sinalcabo/force-app/main/default/objects/WorkOrder/fields/Desaparecida_Origem__c.field-meta.xml
<CustomField>
    <fullName>Desaparecida_Origem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando a ordem deixou de existir na NOS, ou seja quando a consulta do detalhe já não a encontra.</description>
    <inlineHelpText>Não apagues a ordem. Confirma com a NOS antes de a fechar do nosso lado.</inlineHelpText>
    <label>Desaparecida na NOS</label>
    <type>Checkbox</type>
</CustomField>