sinalcabo/force-app/main/default/objects/WorkOrder/fields/Divergencia_Territorio__c.field-meta.xml
<CustomField>
    <fullName>Divergencia_Territorio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando o território da célula proposta não é o território do grupo que a NOS indicou.</description>
    <inlineHelpText>Confirma no terreno qual está certo e resolve pela acção Classificar. A divergência desaparece ao confirmar.</inlineHelpText>
    <label>Divergência de território</label>
    <type>Checkbox</type>
</CustomField>