sinalcabo/force-app/main/default/objects/WorkOrder/fields/Estado_Aceitacao_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aceitacao_Cliente__c</fullName>
    <description>Estado de aceitação da ordem no PNI, a plataforma onde a NOS valida o trabalho realizado. Valores por fixar com o cliente.</description>
    <inlineHelpText>Preenchido pelo back-office enquanto não houver interface. Diz se a NOS já aceitou o trabalho.</inlineHelpText>
    <label>Estado no PNI</label>
    <length>40</length>
    <type>Text</type>
</CustomField>