sinalcabo/force-app/main/default/objects/WorkOrder/fields/Estado_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cliente__c</fullName>
    <description>Estado da tarefa do lado da NOS, lido da API. É informação do operador e nunca altera o estado da ordem na SinalCabo.</description>
    <inlineHelpText>Só a NOS escreve aqui. Se a NOS fechar e a ordem ainda estiver aberta do nosso lado, a ordem aparece na vista de fechadas sem fecho.</inlineHelpText>
    <label>Estado no NetGuard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASSIGNED_TO_COMPANY</fullName>
                <label>Atribuída à empresa</label>
            </value>
            <value>
                <fullName>ASSIGNED_TO_USER</fullName>
                <label>Atribuída ao técnico</label>
            </value>
            <value>
                <fullName>WORK_IN_PROGRESS</fullName>
                <label>Em execução</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>RESOLVED</fullName>
                <label>Resolvida</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Fechada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>