sinalcabo/force-app/main/default/objects/WorkOrder/fields/Estado_Facturacao__c.field-meta.xml
<CustomField>
    <fullName>Estado_Facturacao__c</fullName>
    <description>Terceiro estado da ordem, ao lado do estado da SinalCabo e do estado no NetGuard. Diz se a ordem já foi facturada ao operador.</description>
    <inlineHelpText>Nasce Não aplicável nas ordens dentro da avença e Por facturar nas restantes. Passa a Incluído no auto quando entra num auto de medição.</inlineHelpText>
    <label>Estado de facturação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não aplicável (avença)</fullName>
            </value>
            <value>
                <fullName>Por facturar</fullName>
            </value>
            <value>
                <fullName>Incluído no auto</fullName>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>