sinalcabo/force-app/main/default/objects/WorkOrder/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <description>Família do tipo de trabalho, lida do tipo de trabalho associado à ordem.</description>
    <formula>TEXT(WorkType.Familia__c)</formula>
    <inlineHelpText>Avaria, Manutenção, Obra, Policiamento ou Cadastro. Vazio quando a ordem ainda não tem tipo de trabalho.</inlineHelpText>
    <label>Família da ordem</label>
    <type>Text</type>
</CustomField>