sinalcabo/force-app/main/default/objects/WorkOrder/fields/Grupo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Cliente__c</fullName>
    <description>Grupo do parceiro a que a NOS atribuiu a tarefa, por exemplo TS2-Sinalcabo ou TL2-Sinalcabo.</description>
    <inlineHelpText>É o que determina o território proposto. Se a célula apontar a outro território, a ordem fica com divergência.</inlineHelpText>
    <label>Grupo na NOS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>