sinalcabo/force-app/main/default/objects/WorkOrder/fields/Minutos_Parado__c.field-meta.xml
<CustomField>
    <fullName>Minutos_Parado__c</fullName>
    <description>Soma dos minutos de todas as paragens registadas na ordem. É o tempo que não conta para os prazos.</description>
    <inlineHelpText>É calculado a partir das paragens da ordem. Para o corrigir, corrige-se a paragem e não este número.</inlineHelpText>
    <label>Minutos parado</label>
    <summarizedField>Paragem_Ordem__c.Minutos__c</summarizedField>
    <summaryForeignKey>Paragem_Ordem__c.Ordem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>