sinalcabo/force-app/main/default/objects/WorkOrder/fields/Origem_Celula__c.field-meta.xml
<CustomField>
    <fullName>Origem_Celula__c</fullName>
    <description>Diz quem pôs a célula na ordem: a leitura automática ou uma pessoa do despacho.</description>
    <inlineHelpText>Proposta pela API significa que ninguém confirmou ainda. Passa a Despacho assim que alguém classificar a ordem.</inlineHelpText>
    <label>Origem da célula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposta pela API</fullName>
            </value>
            <value>
                <fullName>Despacho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>