sinalcabo/force-app/main/default/objects/WorkOrder/fields/Origem_Registo__c.field-meta.xml
<CustomField>
    <fullName>Origem_Registo__c</fullName>
    <description>Diz quem escreveu a ordem pela última vez. O ficheiro do PNI manda sobre a ligação à NOS, e é por este campo que se sabe qual das duas origens está à vista.</description>
    <inlineHelpText>Uma ordem com origem no ficheiro do PNI ainda não foi confirmada pela ligação à NOS. Não é erro, é só uma ordem que a ligação ainda não trouxe.</inlineHelpText>
    <label>Origem do registo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ligação à NOS</fullName>
                <default>true</default>
                <label>Ligação à NOS</label>
            </value>
            <value>
                <fullName>Ficheiro do PNI</fullName>
            </value>
            <value>
                <fullName>Escrito à mão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>