sinalcabo/force-app/main/default/objects/WorkOrder/fields/Prioridade_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Prioridade_Cliente__c</fullName>
    <description>Prioridade que a NOS deu à tarefa e que corresponde ao nível de serviço acordado.</description>
    <inlineHelpText>Valores vistos: Low, Medium, High. Nas avarias é também copiada para a prioridade da ordem.</inlineHelpText>
    <label>Prioridade na NOS (SLA)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>