sinalcabo/force-app/main/default/objects/WorkOrder/fields/Recurso_Por_Mapear__c.field-meta.xml
<CustomField>
    <fullName>Recurso_Por_Mapear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando a NOS indicou um técnico que não corresponde a nenhum recurso de serviço nosso.</description>
    <inlineHelpText>Resolve-se a gravar o código da NOS no recurso de serviço do técnico. Depois disso a ordem seguinte já liga sozinha.</inlineHelpText>
    <label>Técnico por mapear</label>
    <type>Checkbox</type>
</CustomField>