sinalcabo/force-app/main/default/objects/WorkOrder/fields/Referencia_Ocorrencia_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Ocorrencia_Cliente__c</fullName>
    <description>Referência do incidente que deu origem à tarefa na NOS, por exemplo INC000169413249. Várias ordens podem partilhar o mesmo pai.</description>
    <externalId>true</externalId>
    <inlineHelpText>Serve para agrupar ordens do mesmo incidente e para falar com a NOS sobre o caso.</inlineHelpText>
    <label>Ocorrência NOS (ticket pai)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>