sinalcabo/force-app/main/default/objects/WorkOrder/fields/Referencia_Ordem_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Ordem_Cliente__c</fullName>
    <description>Referência completa da tarefa na plataforma da NOS, por exemplo TAS000002533674. É a chave que liga a ordem à origem e impede duplicados.</description>
    <externalId>true</externalId>
    <inlineHelpText>Nunca alteres este valor. É por ele que a integração reconhece a ordem em cada leitura.</inlineHelpText>
    <label>Referência NOS</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>