sinalcabo/force-app/main/default/objects/WorkOrder/fields/Responsavel_Paragem__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_Paragem__c</fullName>
    <description>De quem é a espera que suspende o prazo. É o que sustenta a contestação de uma penalidade.</description>
    <inlineHelpText>NOS quando falta material ou informação do operador, Entidade externa para autoridades e licenciamentos, Cliente final quando não há acesso ao local.</inlineHelpText>
    <label>Responsável pela paragem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SC_FS_Responsavel_Paragem</valueSetName>
    </valueSet>
</CustomField>