sinalcabo/force-app/main/default/objects/WorkOrder/fields/Responsavel_TEC__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_TEC__c</fullName>
    <description>Quem tem o cadastro em mão: ninguém antes do fecho do técnico, o técnico enquanto não houver produção, o back-office depois disso.</description>
    <formula>IF(ISBLANK(Data_Fecho_Tecnico__c), &quot;&quot;, IF(ISBLANK(Data_Producao__c), &quot;Técnico&quot;, &quot;Back-office&quot;))</formula>
    <inlineHelpText>É calculado. Muda sozinho quando a data de produção do cadastro for preenchida.</inlineHelpText>
    <label>Responsável do cadastro</label>
    <type>Text</type>
</CustomField>