sinalcabo/force-app/main/default/objects/WorkOrder/fields/Resultado_Cadastro__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Cadastro__c</fullName>
    <description>Diz se a intervenção deixou cadastro para actualizar na rede.</description>
    <inlineHelpText>Por determinar até alguém confirmar. É este campo que alimenta a lista de fechadas por determinar.</inlineHelpText>
    <label>Resultado do cadastro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Com cadastro</fullName>
            </value>
            <value>
                <fullName>Sem cadastro</fullName>
            </value>
            <value>
                <fullName>Por determinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>