sinalcabo/force-app/main/default/objects/WorkOrder/fields/Risco_Incumprimento__c.field-meta.xml
<CustomField>
    <fullName>Risco_Incumprimento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado pela plataforma quando falta um quarto do prazo para o alvo do prazo em curso.</description>
    <inlineHelpText>É o aviso a 75% do prazo. Serve as listas de risco e a notificação ao dono da ordem. Ninguém o liga à mão.</inlineHelpText>
    <label>Risco de incumprimento</label>
    <type>Checkbox</type>
</CustomField>