sinalcabo/force-app/main/default/objects/WorkOrder/fields/Sinal_Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Sinal_Classificacao__c</fullName>
    <description>Semáforo da classificação da ordem, para se ver numa lista o que falta tratar.</description>
    <formula>IF(Divergencia_Territorio__c, &quot;⚠ Divergência de território&quot;, IF(NOT(Classificacao_Confirmada__c), &quot;● Por classificar&quot;, &quot;✓ Classificada&quot;))</formula>
    <inlineHelpText>Divergência primeiro, depois por classificar, depois classificada. É calculado, não se escreve.</inlineHelpText>
    <label>Sinal</label>
    <type>Text</type>
</CustomField>