sinalcabo/force-app/main/default/objects/WorkOrder/fields/SLA_Incumprido__c.field-meta.xml
<CustomField>
    <fullName>SLA_Incumprido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado pela plataforma quando um prazo passa o alvo sem estar concluído.</description>
    <inlineHelpText>Uma ordem com esta caixa ligada é candidata a penalidade. Confirma as paragens registadas antes de aceitar o valor.</inlineHelpText>
    <label>SLA incumprido</label>
    <type>Checkbox</type>
</CustomField>