sinalcabo/force-app/main/default/objects/WorkOrder/fields/Subestado__c.field-meta.xml
<CustomField>
    <fullName>Subestado__c</fullName>
    <description>Detalhe do estado da ordem do lado da SinalCabo. Os valores definitivos ficam por fechar com o cliente.</description>
    <inlineHelpText>Nasce Por definir. A lista final entra quando o cliente fechar os motivos de pendência.</inlineHelpText>
    <label>Subestado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Por definir</fullName>
                <default>true</default>
                <label>Por definir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>