sinalcabo/force-app/main/default/objects/WorkOrder/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <description>Tecnologia de rede da intervenção, herdada da célula.</description>
    <inlineHelpText>Muda sozinha quando a célula muda. Corrige à mão só se a célula estiver certa e a tecnologia errada.</inlineHelpText>
    <label>Tecnologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HFC</fullName>
            </value>
            <value>
                <fullName>FTTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>