sinalcabo/force-app/main/default/objects/WorkOrder/fields/Ultimo_Lote__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Lote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lote que escreveu esta ordem pela última vez. Serve para ir da ordem à corrida que a trouxe.</description>
    <inlineHelpText>Abre o lote para ver a janela lida, os contadores e as ocorrências.</inlineHelpText>
    <label>Último lote de integração</label>
    <referenceTo>Lote_Integracao__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_Trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>