sinalcabo/force-app/main/default/objects/WorkOrder/listViews/Avarias_abertas.listView-meta.xml
<ListView>
    <fullName>Avarias_abertas</fullName>
    <columns>Name</columns>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Referencia_Ordem_Cliente__c</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Subestado__c</columns>
    <columns>Estado_Cliente__c</columns>
    <columns>Celula__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Data_Atribuicao_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Familia__c</field>
        <operation>equals</operation>
        <value>Avaria</value>
    </filters>
    <filters>
        <field>IsClosed</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Celula__c</field>
        <operation>equals</operation>
        <value>YSE30</value>
    </filters>
    <label>Avarias abertas</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>