sinalcabo/force-app/main/default/objects/WorkOrder/listViews/Cadastro_Fechadas_por_determinar.listView-meta.xml
<ListView>
    <fullName>Cadastro_Fechadas_por_determinar</fullName>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Referencia_Ordem_Cliente__c</columns>
    <columns>WorkType</columns>
    <columns>Familia__c</columns>
    <columns>Estado_Aceitacao_Cliente__c</columns>
    <columns>Resultado_Cadastro__c</columns>
    <columns>Data_Fim_Cliente__c</columns>
    <columns>Celula__c</columns>
    <columns>Contrato_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsClosed</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Resultado_Cadastro__c</field>
        <operation>equals</operation>
        <value>Por determinar</value>
    </filters>
    <label>Cadastro · Fechadas por determinar</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>