sinalcabo/force-app/main/default/objects/WorkOrder/listViews/Manutencoes_abertas.listView-meta.xml
<ListView>
    <fullName>Manutencoes_abertas</fullName>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Referencia_Ordem_Cliente__c</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Subestado__c</columns>
    <columns>Estado_Cliente__c</columns>
    <columns>Celula__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Data_Atribuicao_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Familia__c</field>
        <operation>equals</operation>
        <value>Manutenção</value>
    </filters>
    <filters>
        <field>IsClosed</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Manutenções abertas</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>