sinalcabo/force-app/main/default/objects/WorkOrder/listViews/My_WorkOrders.listView-meta.xml
<ListView>
    <fullName>My_WorkOrders</fullName>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Referencia_Ordem_Cliente__c</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Estado_Cliente__c</columns>
    <columns>WorkType</columns>
    <columns>Celula__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Priority</columns>
    <columns>Data_Atribuicao_Cliente__c</columns>
    <columns>Estado_Facturacao__c</columns>
    <filterScope>Mine</filterScope>
    <label>As minhas ordens</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>