sinalcabo/force-app/main/default/objects/WorkOrder/listViews/NOS_Com_divergencia_de_territorio.listView-meta.xml
<ListView>
    <fullName>NOS_Com_divergencia_de_territorio</fullName>
    <columns>Name</columns>
    <columns>Sinal_Classificacao__c</columns>
    <columns>Referencia_Ordem_Cliente__c</columns>
    <columns>Subject</columns>
    <columns>Celula__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Grupo_Cliente__c</columns>
    <columns>Classificacao_Confirmada__c</columns>
    <columns>Data_Atribuicao_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Divergencia_Territorio__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsClosed</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>NOS · Com divergência de território</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>